--- a/Swarm/release/dockercoins.yaml
+++ b/Swarm/release/dockercoins.yaml
@@ -7,7 +7,7 @@ services:
       replicas: 1
       restart_policy:
         condition: any
-    image: dockercoins/hasher
+    image: dockercoins/hasher:v0.2
   redis:
     deploy:
       placement:
@@ -25,7 +25,7 @@ services:
         - node.role == worker
       restart_policy:
         condition: any
-    image: dockercoins/rng
+    image: dockercoins/rng:v0.2
   webui:
     deploy:
       placement:
@@ -34,7 +34,7 @@ services:
       replicas: 1
       restart_policy:
         condition: any
-    image: dockercoins/webui
+    image: dockercoins/webui:v0.2
     ports:
     - "30001:80"
   worker:
@@ -45,5 +45,5 @@ services:
       replicas: 1
       restart_policy:
         condition: any
-    image: dockercoins/worker
+    image: dockercoins/worker:v0.2
 version: "3.8"
