--- a/Swarm/release/dockercoins-BLUE.yaml
+++ b/Swarm/release/dockercoins-BLUE.yaml
@@ -7,7 +7,7 @@ services:
       replicas: 1
       restart_policy:
         condition: any
-    image: dockercoins/hasher:v0.2
+    image: secobau/dockercoins-hasher:release-1.1
   redis:
     deploy:
       placement:
@@ -25,7 +25,7 @@ services:
         - node.role == worker
       restart_policy:
         condition: any
-    image: dockercoins/rng:v0.4
+    image: secobau/dockercoins-rng:release-1.1
   webui:
     deploy:
       placement:
@@ -34,7 +34,7 @@ services:
       replicas: 1
       restart_policy:
         condition: any
-    image: dockercoins/webui:v0.2
+    image: secobau/dockercoins-webui:release-1.1
     ports:
     - "31001:80"
   worker:
@@ -45,6 +45,6 @@ services:
       replicas: 1
       restart_policy:
         condition: any
-    image: dockercoins/worker:v0.2
+    image: secobau/dockercoins-worker:release-1.1
 version: "3.8"
 
