--- a/Swarm/release/petclinic.yaml
+++ b/Swarm/release/petclinic.yaml
@@ -8,7 +8,7 @@ services:
       replicas: 1
       restart_policy:
         condition: any
-    image: petclinic
+    image: secobau/petclinic
     ports:
       - 30002:8080
 version: '3.8'
