--- a/Swarm/release/petclinic-BLUE.yaml
+++ b/Swarm/release/petclinic-BLUE.yaml
@@ -1,6 +1,5 @@
 services:
   web:
-    container_name: petclinic
     deploy:
       placement:
         constraints:
@@ -8,7 +7,7 @@ services:
       replicas: 1
       restart_policy:
         condition: any
-    image: petclinic
+    image: secobau/petclinic
     ports:
       - 31002:8080
 version: '3.8'
