--- a/Swarm/release/dockercoins.yaml
+++ b/Swarm/release/dockercoins.yaml
@@ -7,7 +7,7 @@ services:
       replicas: 1
       restart_policy:
         condition: any
-    image: dockercoins/hasher:v0.2
+    image: secobau/dockercoins:hasher-1.3
   redis:
     deploy:
       placement:
@@ -25,7 +25,7 @@ services:
         - node.role == worker
       restart_policy:
         condition: any
-    image: dockercoins/rng:v0.4
+    image: secobau/dockercoins:rng-1.1
   webui:
     deploy:
       placement:
@@ -34,7 +34,7 @@ services:
       replicas: 1
       restart_policy:
         condition: any
-    image: dockercoins/webui:v0.2
+    image: secobau/dockercoins:webui-1.3
     ports:
     - "30001:80"
   worker:
@@ -45,5 +45,5 @@ services:
       replicas: 1
       restart_policy:
         condition: any
-    image: dockercoins/worker:v0.2
+    image: secobau/dockercoins:worker-1.0
 version: "3.8"
