--- a/Kubernetes/release/dockercoins-BLUE.yaml
+++ b/Kubernetes/release/dockercoins-BLUE.yaml
@@ -4,7 +4,7 @@
 #########################################################################
 ---
 apiVersion: apps/v1
-kind: Daemonset
+kind: DaemonSet
 metadata:
   name: rng
 spec:
