--- a/Kubernetes/release/php-BLUE.yaml
+++ b/Kubernetes/release/php-BLUE.yaml
@@ -6,33 +6,31 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: php-BLUE
+  name: php-blue
 spec:
   replicas: 1
   selector:
     matchLabels:
-      service: php-BLUE
+      service: php-blue
   template:
     metadata:
       labels:
-        service: php-BLUE
+        service: php-blue
     spec:
       containers:
-      - name: php-BLUE
+      - name: php-blue
         image: secobau/php:rc-apache-1.1
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: php-BLUE
+  name: php-blue
 spec:
   ports:
   - port: 80
     nodePort: 31003
   selector:
-    service: php-BLUE
+    service: php-blue
   type: NodePort
 ---
-#########################################################################
-# kubectl apply -f php-BLUE.yaml						;
 #########################################################################
