--- a/Swarm/release/php-BLUE.yaml
+++ b/Swarm/release/php-BLUE.yaml
@@ -1,3 +1,7 @@
+#########################################################################
+#      Copyright (C) 2020        Sebastian Francisco Colomar Bauza      #
+#      SPDX-License-Identifier:  GPL-2.0-only                           #
+#########################################################################
 services:
   php:
     deploy:
@@ -11,3 +15,4 @@ services:
     ports:
     - "31003:80"
 version: "3.8"
+#########################################################################
