--- a/Swarm/release/dockercoins-BLUE.yaml
+++ b/Swarm/release/dockercoins-BLUE.yaml
@@ -1,3 +1,7 @@
+#########################################################################
+#      Copyright (C) 2020        Sebastian Francisco Colomar Bauza      #
+#      SPDX-License-Identifier:  GPL-2.0-only                           #
+#########################################################################
 services:
   hasher:
     deploy:
@@ -47,4 +51,4 @@ services:
         condition: any
     image: secobau/dockercoins-worker:release-1.1
 version: "3.8"
-
+#########################################################################
