--- a/Swarm/release/dockercoins.yaml
+++ b/Swarm/release/dockercoins.yaml
@@ -1,3 +1,7 @@
+#########################################################################
+#      Copyright (C) 2020        Sebastian Francisco Colomar Bauza      #
+#      SPDX-License-Identifier:  GPL-2.0-only                           #
+#########################################################################
 services:
   hasher:
     deploy:
@@ -47,3 +51,4 @@ services:
         condition: any
     image: secobau/dockercoins:worker-1.0
 version: "3.8"
+#########################################################################
