--- a/Swarm/release/petclinic.yaml
+++ b/Swarm/release/petclinic.yaml
@@ -1,3 +1,7 @@
+#########################################################################
+#      Copyright (C) 2020        Sebastian Francisco Colomar Bauza      #
+#      SPDX-License-Identifier:  GPL-2.0-only                           #
+#########################################################################
 services:
   web:
     deploy:
@@ -11,3 +15,4 @@ services:
     ports:
       - 30002:8080
 version: '3.8'
+#########################################################################
