Fix typo in redis image

--- a/Kubernetes/release/dockercoins-BLUE.yaml
+++ b/Kubernetes/release/dockercoins-BLUE.yaml
@@ -54,7 +54,7 @@ spec:
     spec:
       containers:
       - name: redis-blue
-        image: redis-blue
+        image: redis
 ---
 apiVersion: apps/v1
 kind: Deployment
