--- a/Kubernetes/php.yaml
+++ b/Kubernetes/php.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       -
-        image: secobau/php:rc-apache-1.1
+        image: secobau/php:rc-apache-1.1@sha256:c82dba0a5651b50ec3a8c95b675bde71c58c94511853e380e0a5e40b95f36832
         name: php
 ---
 apiVersion: v1
